fix massive head page heading on mobile

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -17,7 +17,7 @@
   z-index: 1; /* Ensure it's above content if needed */
 }
 @media (max-width: 768px) {
-  #hero h1 {
+  #hero h3 {
     font-size: 2.5rem; /* Smaller heading on mobile */
     padding: 8px 16px; /* Reduced padding for mobile */
     border-width: 1px; /* Thinner border on small screens */
@@ -50,7 +50,7 @@
 }
 @media (max-width: 768px) {
   #cta h2 {
-    font-size: 2rem; /* Smaller heading on mobile */
+    font-size: 1.6rem; /* Smaller heading on mobile */
   }
   #cta p {
     font-size: 1rem;
